AG-3606 - fix alignment of cell widgets with manual row height

--- a/community-modules/core/src/styles/ag-grid.scss
+++ b/community-modules/core/src/styles/ag-grid.scss
@@ -620,6 +620,9 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     align-items: center;
     width: 100%;
     height: 100%;
+    &.ag-row-group {
+        align-items: flex-start;
+    }
 }
 
 .ag-cell-auto-height {
